@@ -1,7 +1,0 @@
-post_install() {
-  msg 'Add the following to crontab:"
-  msg '0 * * * * freedns.py UPDATE_KEY [IP_FILE]'
-  msg 'Where UPDATE_KEY is the update key in the FreeDNS direct update link'
-}
-
-# vim:set ts=2 sw=2 et:
