@@ -1,0 +1,2 @@
+#!/bin/sh
+su -s /bin/bash -c '/usr/bin/freedns.py' nobody
